-XX:MaxTenuringThreshold=x控制对象晋升老年的年龄